# CircuitPython_edupico2_paj7620

./: LICENSE  README.rst  README.rst.license  edupico2_paj7620.py  mpy-cross  pyproject.toml  requirements.txt
.github/workflows/: release_gh.yml
examples/: edupico2_paj7620_simpletest.py
