# SPDX-FileCopyrightText: 2022 Alec Delaney, written for Adafruit Industries
# SPDX-FileCopyrightText: Copyright (c) 2025 Noqman Muzafar for Cytron Technologies
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-edupico2-paj7620"
description = "CircuitPython library for PAJ7620 gesture detection and proximity sensing"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Cytron Technologies", email = "noqman@cytron.io"}
]
urls = {Homepage = "https://github.com/CytronTechnologies/CircuitPython_edupico2_paj7620"}
keywords = [
    "adafruit",
    "blinka",
    "circuitpython",
    "micropython",
    "edupico2_paj7620",
    "gesture",
    "proximity",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
# TODO: IF LIBRARY FILES ARE A PACKAGE FOLDER,
#       CHANGE `py_modules = ['...']` TO `packages = ['...']`
py-modules = ["edupico2_paj7620"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
